tests/fixtures/invalid/pow_str_none_dict.py
# Cannot call pow() with Str, None, Dict[str, int]
x = pow("hello", None, {"a": 1})
